# our-table

./: .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.cursor/rules/: fastapi-conventions.mdc  project-overview.mdc  react-conventions.mdc  testing-conventions.mdc
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: add_servings.py  add_user_recipe_image_url.py  fd0e4a77df67_initial_schema.py
backend/app/: main.py
backend/app/api/: auth.py  recipes.py  users.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  recipe_share.py  source_recipe.py  user.py  user_recipe.py
backend/app/schemas/: recipes.py  users.py
backend/app/services/: extractor.py
backend/tests/: conftest.py  test_auth.py  test_extractor.py  test_recipes.py  test_users.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: TopBanner.tsx
frontend/src/constants/: recipeImages.ts
frontend/src/hooks/: useBrowserDictation.ts  useCreateRecipe.ts  useDeleteRecipe.ts  useExtractRecipe.ts  useRecipes.ts  useSaveRecipe.ts  useUpdateRecipe.ts  useUploadRecipeImage.ts  useUser.ts
frontend/src/mocks/: handlers.ts
frontend/src/pages/: AddRecipePage.test.tsx  AddRecipePage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RecipeDetailPage.test.tsx  RecipeDetailPage.tsx
frontend/src/test/: renderWithProviders.tsx  setup.ts
(+3 files in other folders)
